--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 
     <p>some previous ones that inspired this direction</p>
     <ul>
-        <li><a href="https://whichlight.github.io/synthruary2022/day20.html">dreamy noise synth</a> 
+        <li><a href="https://qwertyl0l.github.io/synthruary2022/day20.html">dreamy noise synth</a> 
             <br>from synthruary. draw dreamy patterns and sounds</li>
-        <li><a href="https://whichlight.github.io/genuary2022/day25/day25.html">3D depth block drawing</a> 
+        <li><a href="https://qwertyl0l.github.io/genuary2022/day25/day25.html">3D depth block drawing</a> 
             <br>when you press it draws blocks and pushes outward. when you let go, it pulls you forward. 
             from the genuary prompt 'perspective'. 
         </li>
-        <li><a href="https://whichlight.github.io/genuary2022/day15/day15.html">falling sand</a>
+        <li><a href="https://qwertyl0l.github.io/genuary2022/day15/day15.html">falling sand</a>
              <br>click to draw with sand, inspired by sand falling art. from the genuary prompt 'sand'. 
         </li>
-        <li><a href="https://whichlight.github.io/genuary2022/day26/day26.html">airport carpet</a>
+        <li><a href="https://qwertyl0l.github.io/genuary2022/day26/day26.html">airport carpet</a>
             <br>draw a tiled carpet pattern. refresh to clear. from the genuary prompt 'airport carpet'. 
        </li>
 
